Fri Nov 22 10:35:57 2013  Koichi Sasada  <ko1@atdot.net>

	* vm.c (ruby_vm_destruct): do not use ruby_xfree() after freeing
	  objspace.

	* gc.c (ruby_mimfree): added. It is similar to ruby_mimmalloc().

	* internal.h: ditto.

Fri Nov 22 09:42:35 2013  Zachary Scott  <e@zzak.io>

	* test/digest/test_digest.rb: Reverse order of assert_equal
	  Reported by @splattael

Fri Nov 22 09:03:16 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c: fix build failure on FreeBSD introduced by r43763.
	  malloc_usable_size() is defined by malloc_np.h on FreeBSD.

	* configure.in: check malloc.h and malloc_np.h.

Fri Nov 22 08:27:13 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 50a8210.  Important changes
	  in this commit:

	  RubyGems now automatically checks for gem.deps.rb or Gemfile when
	  running ruby executables.  This behavior is similar to `bundle exec
	  rake`.  This change may be reverted before Ruby 2.1.0 if too many bugs
	  are found.

	* test/rubygems:  ditto.

Thu Nov 21 22:33:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: RGENGC_CHECK_MODE should be 0.

Thu Nov 21 21:40:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): Fix the expr to adjust the size
	  of the digit array.

Thu Nov 21 21:36:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_sqrt): Fix the precision of
	  the result BigDecimal of sqrt.
	  [Bug #5266] [ruby-dev:44450]

	* test/bigdecimal/test_bigdecimal.rb: add tests for the above changes.

Thu Nov 21 18:49:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (vm_xrealloc, vm_xfree): use malloc_usable_size() to obtain old
	  size if available.

Thu Nov 21 18:47:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (SimpleDelegator#__getobj__): target object must be set.

	* lib/delegate.rb (DelegateClass#__getobj__): ditto.

Thu Nov 21 18:28:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
